add sandbox attr

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-video-embed",
   "description": "This is a component for Vue.js to utilize YouTube, Vimeo, DailyMotion, Coub iframe embed API easily.",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "author": "Nasa8x",
   "main": "./dist/video-embed.min.js",
   "scripts": {
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/nasa8x/v-video-embed/issues"
   },
-  "homepage": "https://morioh.com/topic/vue-js",
+  "homepage": "https://morioh.com/p/487a79571ccb",
   "keywords": [
     "vue video embed",
     "vue youtube embed",
